# A-Maze-ing

./: .editorconfig  .gitignore  Makefile  README.md  a_maze_ing.py  config.txt  main.py  maze.txt  mazegen-1.0.0-py3-none-any.whl  mazegen-1.0.1-py3-none-any.whl  note.txt  pyproject.toml
mazegen/: __init__.py  canvas.py  cli.py  config.py  errors.py  generator.py  main.py  output.py  patterns.py  shared.py  solver.py  visualize.py
tests/: test_canvas.py  test_config.py  test_generator.py  test_output.py  test_patterns.py  test_shared.py  test_solver.py
