[project]
name = "mazegen"
version = "0.2.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pytest>=9.1.1",
]

[project.optional-dependencies]
dev = ["flake8", "mypy", "pyright", "ruff", "ty", "pytest"]

[project.scripts]
mazegen = "mazegen.cli:main"

[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["mazegen*"]
exclude = ["tests*"]

[tool.ruff]
line-length = 79
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["UP046"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
line-ending = "lf"

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_decorators = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
